fixed bleeding thru pages, and added loading page

--- a/app/globals.css
+++ b/app/globals.css
@@ -205,6 +205,7 @@
     @apply bg-background text-foreground;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    will-change: transform;
 
   }
 }
